// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when domain entity property has invalid identifier of domain entity in dependency namespace should have validation failure for property 1`] = `"Domain entity property 'NotValid' does not match any declared Domain Entity or Domain Entity Subclass in namespace Extension."`;

exports[`when domain entity property has invalid identifier of domain entity in dependency namespace should have validation failure for property 2`] = `
Object {
  "column": 18,
  "line": 15,
  "tokenText": "NotValid",
}
`;

exports[`when domain entity property has invalid identifier should have validation failure for property 1`] = `"Domain entity property 'UndefinedEntityName' does not match any declared Domain Entity or Domain Entity Subclass in namespace EdFi."`;

exports[`when domain entity property has invalid identifier should have validation failure for property 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "UndefinedEntityName",
}
`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: message 0 1`] = `"Domain entity property 'UndefinedEntityName1' does not match any declared Domain Entity or Domain Entity Subclass in namespace EdFi."`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: message 0 2`] = `"Domain entity property 'UndefinedEntityName2' does not match any declared Domain Entity or Domain Entity Subclass in namespace EdFi."`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: sourceMap 0 1`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "UndefinedEntityName1",
}
`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: sourceMap 0 2`] = `
Object {
  "column": 18,
  "line": 8,
  "tokenText": "UndefinedEntityName2",
}
`;

exports[`when domain entity property refers to domain entity in non-dependency namespace should have validation failure for property 1`] = `"Domain entity property 'ExtensionEntityB' does not match any declared Domain Entity or Domain Entity Subclass in namespace Extensiona."`;

exports[`when domain entity property refers to domain entity in non-dependency namespace should have validation failure for property 2`] = `
Object {
  "column": 18,
  "line": 14,
  "tokenText": "ExtensionEntityB",
}
`;
